monitoring/prometheus-stack/grafana-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.hoytlabs.app
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - grafana.hoytlabs.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 3000
          weight: 1
